2013-05-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing by pointer, more efficient unsigned cast, allow offset in pointer read, preparations for more efficient pointer access.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient addition.

2013-05-25 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug #2165 - "Broken comparison" by disableing
	  optimization of comparision unsigned with 2^n literal since it is broken
	* support/regression/test/compare_2_n.c: added test for bug #2165

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* Merged stm8 branch.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c:
	  STM8: Disable failing tests.

2013-05-25 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in: applied patch #211 - "sdbinutils is installed twice",
	  thanks to Tijl Coosemans

2013-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20010224-1.c:
	  STM8: Disable test that fails due to known CSE bug #1968.
	* support/regression/ports/stm8/spec.mk:
	  STM8: Remove definition for __reentrant.
	* src/stm8/gen.c:
	  STM8: Fix handling of out-of-range offsets.

2013-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix float negation, fix large stack-to-stack copy under high register pressure, fix handling of immediate operands.
	* support/regression/tests/gcc-torture-execute-20030408-1.c:
	  STM8: Disable test for known front-end bug.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix handling of V and H flags in cpw.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Silence some warnings.
	* src/stm8/ralloc.c:
	  STM8: Fix missing include.
	* support/regression/tests/gcc-torture-execute-20050613-1.c: