@@ -104,24 +104,24 @@ stm8_genInitStartup(FILE * of)
   /* Init static & global variables */
   fprintf (of, "__sdcc_init_data:\n");
   fprintf (of, "; stm8_genXINIT() start\n");
+
   /* Zeroing memory (required by standard for static & global variables) */
-  fprintf (of, "\tldw x, #0x0000\n");
+  fprintf (of, "\tldw x, #l_DATA\n");
+  fprintf (of, "\tjreq\t00002$\n");
   fprintf (of, "00001$:\n");
-  fprintf (of, "\tcpw x, #l_DATA\n");
-  fprintf (of, "\tjreq  00002$\n");
-  fprintf (of, "\tclr (s_DATA, x)\n");
-  fprintf (of, "\tincw x\n");
-  fprintf (of, "\tjp  00001$\n");
+  fprintf (of, "\tclr (s_DATA - 1, x)\n");
+  fprintf (of, "\tdecw x\n");
+  fprintf (of, "\tjrne\t00001$\n");
   fprintf (of, "00002$:\n");
+
   /* Copy l_INITIALIZER bytes from s_INITIALIZER to s_INITIALIZED */
-  fprintf (of, "\tldw x, #0x0000\n");
+  fprintf (of, "\tldw\tx, #l_INITIALIZER\n");
+  fprintf (of, "\tjreq\t00004$\n");
   fprintf (of, "00003$:\n");
-  fprintf (of, "\tcpw x, #l_INITIALIZER\n");
-  fprintf (of, "\tjreq  00004$\n");
-  fprintf (of, "\tld a, (s_INITIALIZER, x)\n");
-  fprintf (of, "\tld (s_INITIALIZED, x), a\n");
-  fprintf (of, "\tincw x\n");
-  fprintf (of, "\tjp  00003$\n");
+  fprintf (of, "\tld\ta, (s_INITIALIZER - 1, x)\n");
+  fprintf (of, "\tld\t(s_INITIALIZED - 1, x), a\n");
+  fprintf (of, "\tdecw\tx\n");
+  fprintf (of, "\tjrne\t00003$\n");
   fprintf (of, "00004$:\n");
   fprintf (of, "; stm8_genXINIT() end\n");
 }
